--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
+    //Corrutinas
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+
 }
