--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 
 }
