--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
 
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
 }
